<resources>
    <string name="app_name">Urbino</string>

    <!-- Nav Items -->
    <string name="nav_game_boards">My Maps</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_auth">Sign out</string>
    <string name="nav_open">Nav Opened</string>
    <string name="nav_closed">Nav Closed</string>

    <!-- Sign in -->
    <string name="username">Username</string>
    <string name="signin_button">Signin With Google</string>
    <string name="welcome">Welcome to Urbino</string>
    <string name="signin_subtext">Start mapping your mind.</string>

    <!-- Home -->
    <string name="board_name">Divisionista</string>
    <string name="board_description">Wow this is a long description why is this so long does it need to be so long?</string>
    <string name="board_author">Dr. Sonogo</string>
    <string name="fab_option_public">Add public board</string>
    <string name="fab_option_code">Add board from class code</string>

    <!-- Public Boards -->
    <string name="public_boards_logo">Public Boards</string>

    <!-- Board Info -->
    <string name="board_info">Board information</string>
    <string name="info_nodes">16 nodes</string>
    <string name="info_duration">8 weeks remaining</string>
    <string name="info_owner">Dr. Sanogo</string>
    <string name="info_subject">Mathematics</string>
    <string name="info_delete_board">Delete board</string>

    <!-- Custom course code dialog -->
    <string name="code_dialog_hint">Course code</string>
    <string name="code_dialog_accept">Find course</string>
    <string name="code_dialog_cancel">Cancel</string>
    <string name="code_dialog_text">Enter the course code for a private or public board.</string>

    <!-- Dialog for node -->
    <string name="node_dialog_name">Node Name</string>
    <string name="node_dialog_bonus">Bonus</string>
    <string name="node_dialog_completed">%1$d out of %2$d people have completed this node</string>
    <string name="node_dialog_description">Some sort of very long node description</string>
    <string name="node_dialog_accept">Open Node</string>
    <string name="node_dialog_cancel">Cancel</string>

    <string-array name="challenges">
        <item>Gain %1$d%% experience for this node per person who completes this node.</item>
        <item>Gain %1$d%% experience for this node if you get every challenge question correct.</item>
        <item>Gain %1$d%% experience for this node if you help another person in this node.</item>
    </string-array>

    <string name="task_bonus">x%1$d</string>

    <string name="card_exercise_title">Exercise</string>
    <string name="card_exercise_questions">%1$d Questions</string>
    <string name="card_exercise_description">Description</string>
    <string name="card_exercise_timeLimit">No Time Limit</string>
    <string name="card_exercise_timeLimit_active">%1$d minutes</string>
    <string name="card_exercise_start">Start</string>
    <string name="card_exercise_help">Mentor</string>

    <string name="card_video_title">Video</string>
    <string name="card_video_description">Description</string>
    <string name="player_error">Error initializing YouTube player: %s</string>

    <string name="card_game_title">Game</string>
    <string name="card_game_description">Description</string>

    <!-- debug -->
    <string name="sample_string">Bacon ipsum dolor amet I have a 10 year old son. He has words. He is so good with these words it\'s unbelievable. I think my strongest asset maybe by far is my temperament. I have a placeholding temperament. That other text? Sadly, it’s no longer a 10. That other text? Sadly, it’s no longer a 10. If Trump Ipsum weren’t my own words, perhaps I’d be dating it. Lorem Ispum is a choke artist. It chokes! My text is long and beautiful, as, it has been well documented, are various other parts of my website. It’s about making placeholder text great again. That’s what people want, they want placeholder text to be great again. I think the only difference between me and the other placeholder text is that I’m more honest and my words are more beautiful. My text is long and beautiful, as, it has been well documented, are various other parts of my website. If Trump Ipsum weren’t my own words, perhaps I’d be dating it.</string>

</resources>
