<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <ImageView
        android:src="@mipmap/urbino_logo_white"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="centerInside"
        android:background="@color/colorAccent"
        android:contentDescription="@string/app_name" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:orientation="vertical">

        <TextView
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/code_dialog_text"
            android:textColor="@color/colorSecondaryText"/>

        <EditText
            android:id="@+id/course_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/colorPrimaryText"
            android:fontFamily="sans-serif"
            android:hint="@string/code_dialog_hint"/>

    </LinearLayout>
</LinearLayout>