<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/info_container"
    android:paddingTop="34dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/sample_string" />

        <View style="@style/Divider"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/board_info"
            android:textColor="@color/colorSecondaryText"
            android:textSize="16sp"
            />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/info_nodes"
            android:background="?android:selectableItemBackground"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="48dp">

                <ImageView
                    android:id="@+id/info_image_nodes"
                    android:tint="@color/colorPrimary"
                    android:src="@drawable/ic_lens_black_24dp"
                    android:padding="16dp"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content" />


                <TextView
                    android:id="@+id/info_text_nodes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_nodes"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="16sp"
                    />

        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/info_duration"
            android:background="?android:selectableItemBackground"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="48dp">

                <ImageView
                    android:id="@+id/info_image_duration"
                    android:tint="@color/colorPrimary"
                    android:src="@drawable/ic_access_time_black_24dp"
                    android:padding="16dp"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content" />


                <TextView
                    android:id="@+id/info_text_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_duration"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="16sp"
                    />

        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/info_owner"
            android:background="?android:selectableItemBackground"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="48dp">

                <ImageView
                    android:id="@+id/info_image_owner"
                    android:src="@drawable/ic_person_black_24dp"
                    android:tint="@color/colorPrimary"
                    android:padding="16dp"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content" />


                <TextView
                    android:id="@+id/info_text_owner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_owner"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="16sp"
                    />

        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/info_subject"
            android:background="?android:selectableItemBackground"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="48dp">

                <ImageView
                    android:id="@+id/info_image_subject"
                    android:tint="@color/colorPrimary"
                    android:src="@drawable/ic_create_black_24dp"
                    android:padding="16dp"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content" />


                <TextView
                    android:id="@+id/info_text_subject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_subject"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="16sp"
                    />

        </LinearLayout>

        <Button
            android:id="@+id/info_delete"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_delete_board"
            android:backgroundTint="@android:color/holo_red_dark"/>

</LinearLayout>