<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="0dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:showDividers="middle"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:src="@drawable/ic_compass_paper"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:orientation="vertical"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/exercise_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/card_exercise_title"
                        android:textSize="16sp"
                        android:textColor="@color/colorPrimaryText"
                        />

                    <TextView
                        android:id="@+id/exercise_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/colorSecondaryText"
                        android:text="@string/card_exercise_description"
                        />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/exercise_questions"
                android:background="?android:selectableItemBackground"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="32dp">

                <ImageView
                    android:id="@+id/exercise_questions_icon"
                    android:tint="@color/colorPrimary"
                    android:src="@drawable/ic_lens_black_24dp"
                    android:paddingTop="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="8dp"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content" />


                <TextView
                    android:id="@+id/exercise_questions_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_exercise_questions"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="16sp"
                    />

            </LinearLayout>
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/exercise_timelimit"
                android:background="?android:selectableItemBackground"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="32dp">

                <ImageView
                    android:id="@+id/exercise_timelimit_icon"
                    android:tint="@color/colorPrimary"
                    android:src="@drawable/ic_access_time_black_24dp"
                    android:paddingTop="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="8dp"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content" />


                <TextView
                    android:id="@+id/exercise_timelimit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_exercise_timeLimit"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="16sp"
                    />

            </LinearLayout>

            <LinearLayout
                android:paddingBottom="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/exercise_mentor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:textColor="@color/colorAccent"
                    android:text="@string/card_exercise_help"/>

                <Button
                    android:id="@+id/exercise_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:textColor="@color/colorAccent"
                    android:text="@string/card_exercise_start"/>
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/exercise_bonus"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end">

            <ImageView
                android:id="@+id/imageView"
                android:tint="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_gravity="end"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_bonus" />

            <TextView
                android:id="@+id/exercise_bonus_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/imageView"
                android:layout_alignEnd="@id/imageView"
                android:layout_alignStart="@id/imageView"
                android:layout_alignTop="@id/imageView"
                android:gravity="center"
                android:text="@string/task_bonus"
                android:textColor="@color/colorIcons"
                android:textSize="16sp" />

        </RelativeLayout>

    </FrameLayout>


</android.support.v7.widget.CardView>