<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="0dp"
    android:clickable="true"
    tools:context=".views.node.NodeActivity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <FrameLayout
        android:id="@+id/video_frame"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:src="@drawable/ic_bulb"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:orientation="vertical"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/video_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/card_video_title"
                        android:textSize="16sp"
                        android:textColor="@color/colorPrimaryText"
                        />

                    <TextView
                        android:id="@+id/video_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/colorSecondaryText"
                        android:text="@string/card_video_description"
                        />

                </LinearLayout>

            </LinearLayout>

            <com.google.android.youtube.player.YouTubeThumbnailView
                android:id="@+id/youtube_thumbnail"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/video_bonus"
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end">

            <ImageView
                android:id="@+id/imageView"
                android:tint="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_gravity="end"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_bonus" />

            <TextView
                android:id="@+id/video_bonus_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/imageView"
                android:layout_alignEnd="@id/imageView"
                android:layout_alignStart="@id/imageView"
                android:layout_alignTop="@id/imageView"
                android:gravity="center"
                android:text="@string/task_bonus"
                android:textColor="@color/colorIcons"
                android:textSize="16sp" />

        </RelativeLayout>

    </FrameLayout>


</android.support.v7.widget.CardView>